--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,4 @@ gradle-app.setting
 /src/main/resources/application-kafka.properties
 /src/main/resources/application-database.properties
 Dockerfile
+/src/main/resources/application-jwt.properties
